remove buildSrc